updated Meme Fn state to save meme data and corrected meme img overflow issue in CSS

--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ main {
   display: grid;
   grid-template: 100% 100% / 1fr 1fr;
   gap: 17px;
-  margin-bottom: 17px;
+  margin-bottom: 7rem;
 }
 
 .form--label {
@@ -68,6 +68,7 @@ main {
 
 .meme {
   position: relative;
+  /* margin-bottom: 10rem; */
 }
 
 .meme--image {
